--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
           <div class="footer-copyright">
             <div class="site-copyright">
               <p>
-                Copyright 2022 © E-Commerce Theme. All right reserved.
+                 ©2025 All right reserved E-Commerce Website
                 Design by Sandesh Khemani.
               </p>
             </div>
